fix margin spacing

--- a/userChrome/userChrome.css
+++ b/userChrome/userChrome.css
@@ -6,7 +6,7 @@
     display: none !important;
 }
 
-#nav-bar:not(:-moz-lwtheme) {height: 0px !important; margin-top: 0px !important; margin-bottom: 1px !important}
+#nav-bar:not(:-moz-lwtheme) {height: 0px !important; margin-top: 0px !important; margin-bottom: 0px !important}
 
 /* The first and last 2 characters on this line serve as space to comment or disable functions. I have disabled some of the functions in this file and they start from "bookmark - right - off". For clarity, I recommend editing this file in Notepad++ with syntax */
 
@@ -120,7 +120,7 @@ menupopup, panel {--panel-shadow: none !important;}
 /* #navigator-toolbox {margin-left: -5px !important;margin-right: -5px !important;}
 
 /* reduce the spacing of accessory icons, etc. */
-#nav-bar toolbarbutton {margin-left: -5px !important;margin-right: -5px !important;margin-top: 0px !important;}
+#nav-bar toolbarbutton {margin-left: 0px !important;margin-right: 0px !important;margin-top: 0px !important;}
 
 /* sharp edges */
 :root{--toolbarbutton-border-radius: 0 !important;--arrowpanel-menuitem-border-radius: 0 !important;--tab-border-radius: 0 !important;--subviewbutton-border-radius: 0 !important;--arrowpanel-border-radius: 0 !important;}
@@ -171,7 +171,7 @@ menupopup, panel {--panel-shadow: none !important;}
 
 #TabsToolbar, #tabbrowser-tabs {
     --tab-min-height: 18px !important;
-	margin-top: -1px !important;
+	margin-top: 0px !important;
 	border-top: 0px !important;
 	border-bottom: 0px !important;
 }
